#	$NetBSD: CHANGES-1.5.4,v 1.1.2.10 2002/09/04 01:02:36 itojun Exp $

A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:

File						Revision(s)
----						--------

sys/sys/param.h					patch
sys/conf/osrelease.sh				patch
share/tmac/doc-common				patch

  Mark this with 1.5.4_ALPHA.

crypto/Makefile.openssl				1.7 via patch
crypto/dist/openssl/CHANGES			patch
crypto/dist/openssl/crypto/asn1/asn1_lib.c	patch
crypto/dist/openssl/crypto/conf/conf.c		patch
crypto/dist/openssl/crypto/cryptlib.c		patch
crypto/dist/openssl/crypto/cryptlib.h		patch
crypto/dist/openssl/crypto/objects/obj_dat.c	patch
crypto/dist/openssl/ssl/s2_clnt.c		patch
crypto/dist/openssl/ssl/s2_lib.c		patch
crypto/dist/openssl/ssl/s2_srvr.c		patch
crypto/dist/openssl/ssl/s3_clnt.c		patch
crypto/dist/openssl/ssl/s3_srvr.c		patch
crypto/dist/openssl/ssl/ssl.h			patch
crypto/dist/openssl/ssl/ssl_asn1.c		patch
crypto/dist/openssl/ssl/ssl_err.c		patch
crypto/dist/openssl/ssl/ssl_sess.c		patch

  Apply point patch to add ASN.1 encoding and buffer overflow
  checks.

lib/libc/rpc/xdr_array.c			1.13-1.14

  Fix bounds checking, eliminating an overflow condition.

crypto/Makefile.openssl				1.2.2.3 -> 1.7
crypto/dist/openssl/CHANGES			1.1.1.1.2.2 -> 1.6
crypto/dist/openssl/Configure			1.1.1.3-1.1.1.7
crypto/dist/openssl/FAQ				1.2-1.7
crypto/dist/openssl/INSTALL			1.1.1.3-1.1.1.6
crypto/dist/openssl/INSTALL.MacOS		1.2
crypto/dist/openssl/INSTALL.VMS			1.1.1.3-1.1.1.4
crypto/dist/openssl/INSTALL.W32			1.1.1.3-1.1.1.5
crypto/dist/openssl/LICENSE			1.1.1.3-1.1.1.4
crypto/dist/openssl/Makefile.org		1.1.1.3-1.1.1.8
crypto/dist/openssl/Makefile.ssl		1.1.1.3-1.1.1.8
crypto/dist/openssl/NEWS			1.1.1.3-1.1.1.8
crypto/dist/openssl/PROBLEMS			1.1-1.2 (new)
crypto/dist/openssl/README			1.1.1.3-1.1.1.8
crypto/dist/openssl/README.ENGINE		1.1.1.1-1.1.1.2 (new)
crypto/dist/openssl/VMS/install.com		1.1.1.3
crypto/dist/openssl/VMS/vms_idhacks.h		deleted
crypto/dist/openssl/apps/CA.pl			1.1.1.3-1.1.1.5